fix: change in pom to avoid conflict